Wed May 06 05:31:13 GMT 2015  Olly Betts <olly@survex.com>

	* backends/chert/chert_table.cc,backends/glass/glass_table.cc: Remove
	  duplicate includes of "omassert.h".

Wed May 06 05:30:05 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: OS X >= 10.4 apparently supports symbol visibility, so
	  update comment.

Wed May 06 05:29:15 GMT 2015  Olly Betts <olly@survex.com>

	* xapian-config.in: Remove superfluous comment left over from code
	  refactoring.

Wed May 06 05:28:48 GMT 2015  Olly Betts <olly@survex.com>

	* xapian-config.in: Fix the include directory reported by --swigflags
	  for an installed copy to include the "/xapian-1.3" component for
	  a development version.

Wed May 06 05:27:37 GMT 2015  Olly Betts <olly@survex.com>

	* backends/chert/chert_databasereplicator.cc: Use return value of
	  get_message_chunk() rather than ignoring it and repeating the check
	  in the caller.

Wed May 06 05:24:52 GMT 2015  Olly Betts <olly@survex.com>

	* api/replication.cc,backends/brass/,backends/chert/chert_database.cc,
	  backends/chert/chert_table.cc,backends/chert/chert_version.cc,
	  backends/flint/flint_database.cc,backends/flint/flint_table.cc,
	  backends/flint/flint_version.cc,backends/remote/remote-database.cc,
	  bin/,examples/copydatabase.cc,examples/quest.cc,
	  examples/xapian-metadata.cc,net/tcpclient.cc,
	  queryparser/queryparser.lemony,tests/harness/: Add spaces between
	  literal strings and macros which expand to literal strings for C++11
	  compatibility.

Wed May 06 05:04:47 GMT 2015  Olly Betts <olly@survex.com>

	* bin/xapian-tcpsrv.cc: Use STRINGIZE() to include defaults literally
	  in string for --help.

Wed May 06 05:00:38 GMT 2015  Olly Betts <olly@survex.com>

	* HACKING: Update URL.

Wed May 06 04:59:33 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac,xapian-config.in: Rename ANSI_CXXFLAGS to ISO_CXXFLAGS
	  and talk about ISO C++ in configure messages.

Wed May 06 04:44:32 GMT 2015  Olly Betts <olly@survex.com>
