@@ -1,3 +1,8 @@
+Wed May 06 05:32:46 GMT 2015  Olly Betts <olly@survex.com>
+
+	* api/matchspy.cc,tests/api_nodb.cc: Eliminate needless uses of
+	  AutoPtr.
+
 Wed May 06 05:31:13 GMT 2015  Olly Betts <olly@survex.com>
 
 	* backends/chert/chert_table.cc,backends/glass/glass_table.cc: Remove
